# group-1

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
client/: Cargo.toml
client/resources/: asteroid.fbx  cube.fbx  models.json  test_plane.gltf  test_skeleton.fbx  test_skeleton.glb  test_skeleton.gltf  test_skeleton_ik.fbx  textured_cube.fbx  textured_cube.glb  tmp.fbx
client/resources/arm/: arm.mtl
client/resources/arrow/: arrow.mtl
client/resources/asteroid-old/: asteroid.mtl
client/resources/asteroids/: asteroid.mtl  rough_asteroid_small.mtl  round_asteroid_big.mtl  round_asteroid_small.mtl
client/resources/cactus/: cactus.mtl
client/resources/character/: characterBlue.mtl  characterGreen.mtl  characterPosed.mtl  characterPosedsample.mtl
client/resources/cube/: cube.mtl
client/resources/debug_axis/: debug_axis.mtl
client/resources/forcefield/: forcefield.mtl
client/resources/lasso/: lasso.mtl
client/resources/new_asteroid/: asteroid.mtl  (+1 more)
client/shaders/: forcefield.fs  forcefield.vs  hud.fs  hud.vs  light.fs  light.vs  nmap.vs  shader.fs  shader.vs  sprite.fs
client/src/: arm.rs  audio.rs  camera.rs  common.rs  fadable.rs  force_field.rs  init_models.rs  init_skies.rs  joint.rs  lasso.rs  lights.rs  main.rs  mesh.rs  model.rs  particle_emitter.rs  screenshake.rs  shader.rs  skybox.rs  sprite_renderer.rs  tracer.rs  tracker.rs  ui.rs  util.rs  velocity_indicator.rs
server/: Cargo.toml
server/src/: client_components.rs  common.rs  ecs.rs  init_world.rs  main.rs  server_components.rs
server/world/: playerspawns.json  props.json
(+36 files in other folders)
