[package]
name = "group-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.96"
rapier3d = { version = "0.17.2", features = [ "simd-stable" ] }
nalgebra = "0.32.2"
slotmap = "1.0.6"